# artoolkit5

AndroidStudioProjects/nftSimpleProj/nftSimple/: build.gradle
AndroidStudioProjects/nftSimpleProj/nftSimple/src/main/jni/: CMakeLists.txt
lib/SRC/AR/: CMakeLists.txt
lib/SRC/AR2/: CMakeLists.txt
lib/SRC/ARICP/: CMakeLists.txt
lib/SRC/Eden/: CMakeLists.txt
lib/SRC/Gl/: CMakeLists.txt
lib/SRC/KPM/: CMakeLists.txt
lib/SRC/Util/: CMakeLists.txt
lib/SRC/Video/: CMakeLists.txt
